# calibrationapps

./: CHANGELOG.md  README.md  calibration.hs  calibrationapps.cabal
app/: Main.hs  calibrationobservationlog.txt  instrumentdb.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: calibrationapps-0.1.0.0-inplace.conf  package.cache
